# seq-rec

./: .gitignore  Makefile  README.md  model_architecture.md  pyproject.toml
cloudbuild/main/: Dockerfile  cloudbuild_main.yaml
cloudbuild/notebook/: Dockerfile  cloudbuild_notebook.yaml
notebooks/: experiment.ipynb  model.ipynb  model_overfit_one_batch.ipynb  output_analysis.ipynb  pipeline.ipynb  publish_model_to_gcp.ipynb  resume_training.ipynb  test_deploy_new_model_to_existing_endpoint.ipynb
seq_rec/conf/: config.yaml  logging.ini
seq_rec/conf/env/: dev.yaml
seq_rec/conf/input_prep/: conf.yaml
seq_rec/experiment_tracker/: __init__.py  comet_experiment.py  mock_experiment.py
seq_rec/io/: __init__.py  load_training.py  trigger_build.py
seq_rec/metrics/: metrics.py
seq_rec/models/deeprec/: ann_helper.py
seq_rec/models/deeprec/conf/: config.yaml
seq_rec/models/deeprec/conf/tfrs_gru/: v01.yaml  v02.yaml
seq_rec/models/deeprec/tfrs_gru/: __init__.py  candidate_model.py  query_model.py  tfrs_gru.py
seq_rec/op/: alert.py  commons.py  data_validation.py  deploy.py  evaluate.py  ingest.py  model.py  preprocess.py
seq_rec/utils/: __init__.py  conf.py  custom_logging.py
